--- a/index.html
+++ b/index.html
@@ -109,14 +109,42 @@
 
     // 2) Directory linkabile (esempi placeholder). Sostituisci con i tuoi link reali.
     const LINKS = [
-      { id:1, nome:'Traffic Network A', categoria:'Portali ADV', descr:'Network display adult‑friendly', url:'#', accetta:true, note:'no nudo esplicito' },
-      { id:2, nome:'Forum Italia 1', categoria:'Forum', descr:'Annunci eventi & sponsor', url:'#', accetta:true, note:'moderazione' },
-      { id:3, nome:'Lifestyle Magazine', categoria:'Blog', descr:'Accetta sponsored story (soft)', url:'#', accetta:true, note:'solo soft' },
-      { id:4, nome:'EU Forum', categoria:'Forum', descr:'Sezione brand Europa', url:'#', accetta:true, note:'EN' },
-      { id:5, nome:'Coupon Adult', categoria:'Portali ADV', descr:'Banner 300×250 low‑cost', url:'#', accetta:true, note:'traffico misto' },
-      { id:6, nome:'Shop Directory', categoria:'Directory', descr:'E‑shop che vendono spazi sponsor', url:'#', accetta:true, note:'contatto form' },
-      { id:7, nome:'Marketplace B', categoria:'Marketplace', descr:'Inserzioni prodotti adult', url:'#', accetta:true, note:'fee 12%' },
-      { id:8, nome:'Blog Soft Erotic', categoria:'Blog', descr:'Guest post brand soft', url:'#', accetta:true, note:'evita parole hard' }
+      const LINKS = [
+  // --- Forum Scambisti ---
+  { id:1, nome:'Scambiami.it', categoria:'Forum', descr:'Community italiana scambisti', url:'https://www.scambiami.it', accetta:true, note:'IT' },
+  { id:2, nome:'ClubScambisti.eu', categoria:'Forum', descr:'Forum europeo per scambisti', url:'https://www.clubscambisti.eu', accetta:true, note:'Multi-lingua' },
+  { id:3, nome:'IncontriScambisti.com', categoria:'Forum', descr:'Annunci e chat per scambisti', url:'https://www.incontriscambisti.com', accetta:true, note:'IT' },
+  { id:4, nome:'EuroScambisti.com', categoria:'Forum', descr:'Scambisti in Europa', url:'https://www.euroscambisti.com', accetta:true, note:'EN' },
+  { id:5, nome:'FemmeSwap Forum', categoria:'Forum', descr:'Forum soft per coppie aperte', url:'https://www.femmeswap.com', accetta:true, note:'EN' },
+
+  // --- Forum Naturisti ---
+  { id:6, nome:'NaturismoNaturista.it', categoria:'Forum', descr:'Forum italiano naturismo', url:'https://www.naturismonaturista.it', accetta:true, note:'IT' },
+  { id:7, nome:'International Naturist Forum', categoria:'Forum', descr:'Community naturisti internazionale', url:'https://www.internaturist.org', accetta:true, note:'EN' },
+  { id:8, nome:'FEN Naturism', categoria:'Forum', descr:'Forum europeo naturismo', url:'https://www.fen-naturismo.org', accetta:true, note:'Multi-lingua' },
+
+  // --- Forum BDSM / Fetish ---
+  { id:9, nome:'FetLife', categoria:'Forum', descr:'Community mondiale BDSM e fetish', url:'https://www.fetlife.com', accetta:true, note:'EN — Registrazione necessaria' },
+  { id:10, nome:'BDSM Italia', categoria:'Forum', descr:'Forum italiano BDSM e bondage', url:'https://www.bdsmitalia.it', accetta:true, note:'IT' },
+  { id:11, nome:'KinkTalk', categoria:'Forum', descr:'Forum internazionale fetish', url:'https://www.kinkt.com', accetta:true, note:'EN' },
+
+  // --- Blog Soft Erotici ---
+  { id:12, nome:'GQ Italia — Sezione Erotica', categoria:'Blog', descr:'Articoli soft erotici lifestyle', url:'https://www.gqitalia.it/tag/erotica', accetta:true, note:'Soft' },
+  { id:13, nome:'Pink Label Blog', categoria:'Blog', descr:'Recensioni prodotti erotici', url:'https://www.pinklabel.com/blog', accetta:true, note:'EN' },
+  { id:14, nome:'Soft Erotic Stories', categoria:'Blog', descr:'Racconti erotici soft', url:'https://softeroticstories.com', accetta:true, note:'EN' },
+
+  // --- Marketplace Adult-Friendly ---
+  { id:15, nome:'Etsy — Sex Toy Category', categoria:'Marketplace', descr:'Sex toys artigianali su Etsy', url:'https://www.etsy.com/c/health-and-wellness/adult-items/sex-toys', accetta:true, note:'EN' },
+  { id:16, nome:'Lovehoney', categoria:'Marketplace', descr:'E-commerce leader sex toys', url:'https://www.lovehoney.com', accetta:true, note:'Multi-lingua' },
+  { id:17, nome:'PinkCherry', categoria:'Marketplace', descr:'Store canadese/USA adult', url:'https://www.pinkcherry.com', accetta:true, note:'EN' },
+  { id:18, nome:'Amorelie', categoria:'Marketplace', descr:'Store europeo sexy toys', url:'https://www.amorelie.it', accetta:true, note:'IT/DE' },
+
+  // --- Portali ADV / Sponsorship ---
+  { id:19, nome:'TrafficJunky', categoria:'Portali ADV', descr:'Network ADV Pornhub & siti affini', url:'https://www.trafficjunky.com', accetta:true, note:'EN' },
+  { id:20, nome:'JuicyAds', categoria:'Portali ADV', descr:'Banner network adult-friendly', url:'https://www.juicyads.com', accetta:true, note:'EN' },
+  { id:21, nome:'ExoClick', categoria:'Portali ADV', descr:'ADV adult + mainstream', url:'https://www.exoclick.com', accetta:true, note:'Multi-lingua' },
+  { id:22, nome:'AdXpansion', categoria:'Portali ADV', descr:'Native ads e banner adult', url:'https://www.adxpansion.com', accetta:true, note:'EN' }
+];
+
     ];
 
     // ======= STATO =======
