--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
   <title>XexoApp — SexyTraffic Finder</title>
   <meta name="description" content="XexoApp: ricerca veloce di canali e portali adult-friendly per promuovere sexy toys. Unica app, semplice, pronta da consegnare." />
   <meta name="robots" content="noindex,nofollow" />
+
+  <!-- FAVICON (SVG inline, nessun file esterno necessario) -->
+  <link rel="icon" type="image/svg+xml"
+        href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="256" height="256"><rect rx="48" ry="48" width="256" height="256" fill="%23ff4d6d"/><text x="50%" y="54%" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-weight="800" font-size="120" fill="white">X</text></svg>'>
+
+  <!-- SOCIAL PREVIEW (se carichi og-xexoapp.png in root, i social useranno quello) -->
+  <meta property="og:title" content="XexoApp — SexyTraffic Finder">
+  <meta property="og:description" content="Trova in 1 tap forum, club, reti ADV e creator adult-friendly.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://droppaloitalia.github.io/Xexoapp/og-xexoapp.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://droppaloitalia.github.io/Xexoapp/og-xexoapp.png">
+
   <style>
     :root{
       /* PALETTE FRAGOLA XEXO */
-      --bg:#0d0e12;
-      --panel:#14161d;
-      --card:#171923;
-      --muted:#a7adbb;
-      --text:#f5f7fb;
+      --bg:#0d0e12; --panel:#14161d; --card:#171923;
+      --muted:#a7adbb; --text:#f5f7fb;
       --brand:#ff4d6d;      /* fragola principale */
       --brand-2:#ff7a8d;    /* fragola chiaro */
-      --accent:#ffd1d9;     /* rosa chiarissimo di supporto */
+      --accent:#ffd1d9;     /* rosa chiarissimo */
       --ring:#262936;
-
-      --radius:18px;
-      --shadow:0 12px 30px rgba(0,0,0,.28);
+      --radius:18px; --shadow:0 12px 30px rgba(0,0,0,.28);
     }
     *{box-sizing:border-box}
     html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
@@ -40,7 +48,7 @@
     .brand-right{margin-left:auto;display:flex;align-items:center;gap:10px}
     .brand-right img{height:34px; width:auto; border-radius:8px; background:#fff0; object-fit:contain; border:1px solid var(--ring); padding:4px}
 
-    /* CARD / PANEL */
+    /* PANEL & BUTTONS */
     .panel{background:var(--panel);border:1px solid var(--ring);border-radius:var(--radius);box-shadow:var(--shadow)}
     .grid{display:grid;gap:14px}
     .grid-presets{grid-template-columns:repeat(auto-fill,minmax(170px,1fr))}
@@ -67,7 +75,6 @@
     .banner h1{margin:0 0 6px;font-size:26px;letter-spacing:.3px}
     .banner p{margin:0;color:var(--muted)}
     .hero-right{border:1px solid var(--ring);border-radius:16px;overflow:hidden;background:#10121a;display:grid;place-items:center}
-
     /* Silhouette sexy soft (SVG inline come bg) */
     .hero-art{width:100%;height:100%;min-height:160px; background:
       linear-gradient(180deg, rgba(255,77,109,.15), rgba(255,122,141,.08)),
@@ -98,9 +105,10 @@
         </div>
       </div>
       <div class="brand-right">
-        <!-- Sostituisci src con il TUO logo. Carica in repo un file tipo xexo-logo.png -->
+        <!-- LOGO: prova a caricare un file locale /xexo-logo.png; fallback SVG se non trovato -->
         <a href="https://xexofranchising.com" target="_blank" rel="noopener">
-          <img src="./xexo-logo.png" alt="xexofranchising.com" onerror="this.src='data:image/svg+xml;utf8,<?xml version=&quot;1.0&quot;?><svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22160%22 height=%2236%22><rect width=%22100%25%22 height=%22100%25%22 rx=%228%22 fill=%22%23ff4d6d%22/><text x=%2250%25%22 y=%2255%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22Arial%22 font-size=%2214%22 fill=%22white%22>XEXO</text></svg>';" />
+          <img src="./xexo-logo.png" alt="xexofranchising.com"
+               onerror="this.src='data:image/svg+xml;utf8,<?xml version=&quot;1.0&quot;?><svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22160%22 height=%2236%22><rect width=%22100%25%22 height=%22100%25%22 rx=%228%22 fill=%22%23ff4d6d%22/><text x=%2250%25%22 y=%2255%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22Arial%22 font-size=%2214%22 fill=%22white%22>XEXO</text></svg>';" />
         </a>
       </div>
     </header>
@@ -149,7 +157,7 @@
   </div>
 
   <script>
-    // ======= PRESET (puliti come richiesto) =======
+    // ======= PRESET (puliti) =======
     const PRESETS = [
       { name: 'Forum scambisti (Google)', icon: '💬', template: 'https://www.google.com/search?q=forum+scambisti+italia+annunci' },
       { name: 'Reddit (sex toy marketing)', icon: '🧭', template: 'https://www.reddit.com/search/?q=sex+toy+advertising+tips' },
